# HW5

HW5/: пояснительная записка.docx
HW5/Program Files/: CMakeLists.txt  book.cpp  book.h  bookshelf.cpp  bookshelf.h  library.cpp  library.h  main.cpp  rnd.h  row.cpp  row.h
